--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Theme Detection Script - Must be first to prevent FOUC -->
+    <script>
+        (function() {
+            const savedTheme = localStorage.getItem('theme') || 'dark';
+            document.documentElement.setAttribute('data-theme', savedTheme);
+        })();
+    </script>
+    
     <title>Blog - Rohola Zandie | AI Research & Technology Insights</title>
     <meta name="description" content="Insights and research from Rohola Zandie on AI, machine learning, drug discovery, and technology innovation.">
 
@@ -75,112 +84,34 @@
     <!-- Main Content -->
     <main class="main-content">
         <div class="container">
-            <!-- Blog Header -->
-            <section class="blog-header">
-                <div class="row justify-content-center text-center">
-                    <div class="col-lg-8">
-                        <h1 class="blog-title">Research & Insights</h1>
-                        <p class="blog-subtitle">
-                            Exploring the intersection of AI, biotechnology, and innovation. 
-                            Sharing insights from my research and experiences in building technology that matters.
-                        </p>
-                    </div>
-                </div>
-            </section>
-
             <!-- Blog Posts Grid -->
-            <section class="blog-posts">
+            <section class="blog-posts" style="padding-top: 6rem;">
                 <div class="row g-4">
-                    <!-- Blog Post 1 -->
+                    <!-- Blog Post 1 - NEW -->
                     <div class="col-md-6 col-lg-4">
                         <article class="blog-card">
                             <div class="blog-card-image">
-                                <img src="assets/images/posts/ai-drug-discovery/thumbnail.jpg" alt="AI in Drug Discovery" class="img-fluid">
-                                <div class="blog-category">AI Research</div>
-                            </div>
-                            <div class="blog-card-content">
-                                <div class="blog-meta">
-                                    <span class="blog-date">November 2, 2025</span>
-                                    <span class="blog-author">Rohola Zandie</span>
-                                </div>
-                                <h3 class="blog-card-title">
-                                    <a href="posts/ai-drug-discovery/index.html">The Future of AI in Drug Discovery: Challenges and Opportunities</a>
-                                </h3>
-                                <p class="blog-card-excerpt">
-                                    Exploring how artificial intelligence is revolutionizing pharmaceutical research and development, 
-                                    from molecular design to clinical trials optimization.
-                                </p>
-                                <div class="blog-tags">
-                                    <span class="tag">AI</span>
-                                    <span class="tag">Drug Discovery</span>
-                                    <span class="tag">Biotech</span>
-                                    <span class="tag">Machine Learning</span>
-                                </div>
-                                <a href="posts/ai-drug-discovery/index.html" class="read-more">
-                                    Read More <i data-lucide="arrow-right"></i>
-                                </a>
-                            </div>
-                        </article>
-                    </div>
-
-                    <!-- Blog Post 2 -->
-                    <div class="col-md-6 col-lg-4">
-                        <article class="blog-card">
-                            <div class="blog-card-image">
-                                <img src="assets/images/posts/scaling-ai-teams/thumbnail.jpg" alt="Scaling AI Teams" class="img-fluid">
-                                <div class="blog-category">Leadership</div>
-                            </div>
-                            <div class="blog-card-content">
-                                <div class="blog-meta">
-                                    <span class="blog-date">October 28, 2025</span>
-                                    <span class="blog-author">Rohola Zandie</span>
-                                </div>
-                                <h3 class="blog-card-title">
-                                    <a href="posts/scaling-ai-teams/index.html">Building and Scaling AI Research Teams in Biotech</a>
-                                </h3>
-                                <p class="blog-card-excerpt">
-                                    Lessons learned from building high-performing AI research teams, from hiring strategies 
-                                    to fostering innovation in a fast-paced biotech environment.
-                                </p>
-                                <div class="blog-tags">
-                                    <span class="tag">Leadership</span>
-                                    <span class="tag">Team Building</span>
-                                    <span class="tag">AI Research</span>
-                                    <span class="tag">Biotech</span>
-                                </div>
-                                <a href="posts/scaling-ai-teams/index.html" class="read-more">
-                                    Read More <i data-lucide="arrow-right"></i>
-                                </a>
-                            </div>
-                        </article>
-                    </div>
-
-                    <!-- Blog Post 3 -->
-                    <div class="col-md-6 col-lg-4">
-                        <article class="blog-card">
-                            <div class="blog-card-image">
-                                <img src="assets/images/posts/foundation-models-biology/thumbnail.jpg" alt="Foundation Models in Biology" class="img-fluid">
+                                <img src="assets/images/posts/logarithm-perception-information/audio.png" alt="Logarithm, Perception, and Information" class="img-fluid">
                                 <div class="blog-category">Research</div>
                             </div>
                             <div class="blog-card-content">
                                 <div class="blog-meta">
-                                    <span class="blog-date">October 15, 2025</span>
+                                    <span class="blog-date">July 2025</span>
                                     <span class="blog-author">Rohola Zandie</span>
                                 </div>
                                 <h3 class="blog-card-title">
-                                    <a href="posts/foundation-models-biology/index.html">Foundation Models: The Next Frontier in Computational Biology</a>
+                                    <a href="posts/logarithm-perception-information/index.html">Logarithm, Perception, and Information</a>
                                 </h3>
                                 <p class="blog-card-excerpt">
-                                    How large-scale foundation models are transforming our understanding of biological systems 
-                                    and accelerating discoveries in genomics and proteomics.
+                                    Exploring the deep connection between logarithmic perception, brain function, and information theory. From Weber-Fechner law to the mathematical structure of consciousness.
                                 </p>
                                 <div class="blog-tags">
-                                    <span class="tag">Foundation Models</span>
-                                    <span class="tag">Computational Biology</span>
-                                    <span class="tag">Genomics</span>
-                                    <span class="tag">AI</span>
+                                    <span class="tag">Neuroscience</span>
+                                    <span class="tag">Information Theory</span>
+                                    <span class="tag">Psychophysics</span>
+                                    <span class="tag">Mathematics</span>
                                 </div>
-                                <a href="posts/foundation-models-biology/index.html" class="read-more">
+                                <a href="posts/logarithm-perception-information/index.html" class="read-more">
                                     Read More <i data-lucide="arrow-right"></i>
                                 </a>
                             </div>
