fixed the toggle

--- a/blog.html
+++ b/blog.html
@@ -71,6 +71,9 @@
                         <a class="nav-link active" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="persian-blog.html">بلاگ</a>
+                    </li>
+                    <li class="nav-item">
                         <button class="btn btn-link nav-link theme-toggle" id="themeToggle">
                             <i data-lucide="sun" class="icon-light"></i>
                             <i data-lucide="moon" class="icon-dark"></i>
