fixed the cards

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <h2 class="section-title">Contact</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-6 text-center">
-                    <div class="experience-card">
+                    <div class="contact-card">
                         <p class="lead mb-4">Let's connect and discuss AI research, biotechnology, or potential collaborations.</p>
                         <div class="d-flex justify-content-center gap-3">
                             <a href="mailto:rohola@Stealth.bio" class="btn btn-primary">Email</a>
