--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Blog - Rohola Zandie | AI Research & Technology Insights">
     <meta property="og:description" content="Insights and research from Rohola Zandie on AI, machine learning, drug discovery, and technology innovation.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rohola-zandie.com/blog">
+    <meta property="og:url" content="https://roholazandie.com/blog">
     <meta property="og:image" content="assets/images/profile.jpg">
     
     <!-- Twitter Card Meta Tags -->
@@ -90,7 +90,38 @@
             <!-- Blog Posts Grid -->
             <section class="blog-posts" style="padding-top: 6rem;">
                 <div class="row g-4">
-                    <!-- Blog Post 1 - NEW -->
+                    <!-- Blog Post 1 - Philosophy of Science -->
+                    <div class="col-md-6 col-lg-4">
+                        <article class="blog-card">
+                            <div class="blog-card-image">
+                                <img src="assets/images/posts/shut-up-and-calculate/main.jpg" alt="Shut up and Calculate: The role of definitions and language in science" class="img-fluid">
+                                <div class="blog-category">Philosophy</div>
+                            </div>
+                            <div class="blog-card-content">
+                                <div class="blog-meta">
+                                    <span class="blog-date">November 2025</span>
+                                    <span class="blog-author">Rohola Zandie</span>
+                                </div>
+                                <h3 class="blog-card-title">
+                                    <a href="posts/shut-up-and-calculate/index.html">Shut up and Calculate: The role of definitions and language in science</a>
+                                </h3>
+                                <p class="blog-card-excerpt">
+                                    An examination of the philosophical foundations of scientific definitions and the problematic "shut up and calculate" approach in modern physics.
+                                </p>
+                                <div class="blog-tags">
+                                    <span class="tag">Philosophy of Science</span>
+                                    <span class="tag">Theoretical Physics</span>
+                                    <span class="tag">Language</span>
+                                    <span class="tag">Epistemology</span>
+                                </div>
+                                <a href="posts/shut-up-and-calculate/index.html" class="read-more">
+                                    Read More <i data-lucide="arrow-right"></i>
+                                </a>
+                            </div>
+                        </article>
+                    </div>
+                    
+                    <!-- Blog Post 2 - Logarithm Research -->
                     <div class="col-md-6 col-lg-4">
                         <article class="blog-card">
                             <div class="blog-card-image">
