--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,38 @@
             <!-- Blog Posts Grid -->
             <section class="blog-posts" style="padding-top: 6rem;">
                 <div class="row g-4">
-                    <!-- Blog Post 1 - Philosophy of Science -->
+                    <!-- Blog Post 1 - Generalization -->
+                    <div class="col-md-6 col-lg-4">
+                        <article class="blog-card">
+                            <div class="blog-card-image">
+                                <img src="assets/images/posts/generalization/forward-backward.png" alt="Generalization: An Epistemic Dichotomy" class="img-fluid">
+                                <div class="blog-category">Machine Learning</div>
+                            </div>
+                            <div class="blog-card-content">
+                                <div class="blog-meta">
+                                    <span class="blog-date">November 2025</span>
+                                    <span class="blog-author">Rohola Zandie</span>
+                                </div>
+                                <h3 class="blog-card-title">
+                                    <a href="posts/generalization/index.html">Generalization: An Epistemic Dichotomy</a>
+                                </h3>
+                                <p class="blog-card-excerpt">
+                                    Exploring the fundamental tension in machine learning generalization between mean-seeking and mode-seeking behaviors through forward and reverse KL divergence.
+                                </p>
+                                <div class="blog-tags">
+                                    <span class="tag">Machine Learning</span>
+                                    <span class="tag">KL Divergence</span>
+                                    <span class="tag">Generalization</span>
+                                    <span class="tag">Philosophy</span>
+                                </div>
+                                <a href="posts/generalization/index.html" class="read-more">
+                                    Read More <i data-lucide="arrow-right"></i>
+                                </a>
+                            </div>
+                        </article>
+                    </div>
+
+                    <!-- Blog Post 2 - Philosophy of Science -->
                     <div class="col-md-6 col-lg-4">
                         <article class="blog-card">
                             <div class="blog-card-image">
@@ -121,7 +152,7 @@
                         </article>
                     </div>
                     
-                    <!-- Blog Post 2 - Logarithm Research -->
+                    <!-- Blog Post 3 - Logarithm Research -->
                     <div class="col-md-6 col-lg-4">
                         <article class="blog-card">
                             <div class="blog-card-image">
